# torchair

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  OWNERS  README.en.md  README.md  Roadmap2025.md  SECURITY_README.md  Third_Party_Open_Source_Software_Notice  build.sh  build_and_install  build_and_install.sh  classify_rule.txt  classify_rule.yaml  configure  configure.py  public_address_statement.md
autofuse/: CMakeLists.txt
autofuse/src/: CMakeLists.txt
autofuse/src/ascir/: CMakeLists.txt  ascir.cpp  ascir.h  ascir_ops.h  ascir_utils.cpp  ascir_utils.h
autofuse/src/ascir/generator/: CMakeLists.txt  ascir_builtin_ops.cpp  ascir_register.cpp  ascir_register.h  ascir_registry.cpp  ascir_registry.h  builtin_ops_generator_main.cpp  generator.cpp  generator.h
autofuse/src/ascir/meta/: CMakeLists.txt  ascir.cpp  ascir.h  ascir_ops_utils.cc  ascir_ops_utils.h  ascir_utils.cpp  cg_context.cpp  cg_utils.cpp  cg_utils.h
autofuse/src/codegen/: CMakeLists.txt  codegen.cpp  codegen.h  codegen_common.cpp  codegen_common.h  codegen_kernel.cpp  codegen_kernel.h  codegen_proto.cpp  codegen_proto.h  codegen_tiling.cpp  codegen_tiling.h  codegen_tiling_data.cpp  codegen_tiling_data.h
autofuse/src/optimize/: CMakeLists.txt  optimize.cpp  optimize.h
autofuse/src/optimize/autoschedule/: CMakeLists.txt  autoschedule.cpp  autoschedule.h
autofuse/src/python/: CMakeLists.txt  pyascir.cpp  pyascir.h  pyascir_types.cpp  pyascir_types.h  pyautofuse.cpp
autofuse/test/: CMakeLists.txt
autofuse/test/ascir/: CMakeLists.txt  test_ascir.cpp  test_ascir_graph.cpp  test_ascir_ops.cpp  test_cg_util.cpp  test_header_generator.cpp  test_util.h
autofuse/test/codegen/: CMakeLists.txt  test_codegen_kernel.cpp  test_codegen_proto.cpp  test_codegen_tiling_data.cpp
autofuse/test/e2e/: CMakeLists.txt  e2e.cmake  e2e_broadcast.cpp  e2e_broadcast.h  e2e_load_abs_store.cpp  e2e_load_abs_store.h  e2e_load_sub_store.cpp  e2e_load_sub_store.h  e2e_rmax.cpp  e2e_rmax.h  e2e_softmax.cpp  e2e_softmax.h  test_e2e_load_abs_store.cpp  test_e2e_load_sub_store.cpp  test_e2e_softmax.cpp
autofuse/test/e2e/load_abs_store_expect_code/: CMakeLists.txt  e2e_load_abs_store_expect_kernel.cpp  e2e_load_abs_store_expect_proto.json  e2e_load_abs_store_expect_tiling.cpp  load_abs_store_codegen.cpp  load_abs_store_codegen_tiling.cpp  load_abs_store_tiling.h  test_e2e_load_abs_store_expect_kernel.cpp
autofuse/test/e2e/load_broadcast_store_expect_code/: CMakeLists.txt  load_broadcast_store_codegen.cpp  load_broadcast_store_codegen_tiling.cpp  test_load_broadcast_store_codegen.cpp
autofuse/test/e2e/load_rmax_store/: CMakeLists.txt  load_rmax_store_codegen.cpp  load_rmax_store_codegen_tiling.cpp  test_load_rmax_store_kernel.cpp
autofuse/test/optimize/: CMakeLists.txt  test_infer_output.cpp
autofuse/test/python/: CMakeLists.txt  test_python_ascir.py
codegen/: CMakeLists.txt  codegen.cpp  codegen_asc.cpp
codegen/custom_op/: custom_reg_op.h
codegen/monkey_include/graph/: operator.h  operator_reg.h
tests/: CMakeLists.txt  e2e_test.py  test_build_graph.py  test_e2e.py  test_syms_expr.py
tests/aoe/: CMakeLists.txt  aoe.h  aoe_stub.cpp
tests/privateuse1/: CMakeLists.txt  privateuse1.cpp
tests/reg_op_stub/: CMakeLists.txt  reg_op_stub.cpp
tests/smoke/: README.md  aclgraph_test.py  cache_compile_test.py  converter_test.py  converter_unittest.py  data_dump_test.py  ge_data_dump_test.py  ge_optimize_and_convert_test.py  ge_test.py  hcom_cache_st.py  hcom_npu_allgather_test.py  hcom_npu_test.py  hcom_smoke_patch_for_allreduce.py  hcom_st.py  hcom_static_kernel_test.py  static_kernel_blacklist_test.py  static_kernel_cleanup_old_run_packages_test.py  support_no_patch_in_graph_2_3.py
tests/st/: CMakeLists.txt  allowlist_for_publicAPI.json  npu_inductor  torch_npu_schema.json  torchair_aclgraph_reinplace_st.py  torchair_aclgraph_st.py  torchair_auto_converter_functional_st.py  torchair_cache_compile_st.py  torchair_compiled_model_st.py  torchair_converter_error_message_st.py  torchair_customop_st.py  torchair_debug_log_st.py  torchair_eager_st.py  torchair_explicit_order_st.py  torchair_export_st.py  torchair_fx_pattern_st.py  torchair_gear_st.py  torchair_hcom_st.py  torchair_loglevel_st.py  torchair_npugraph_ex_cache_st.py  torchair_npugraph_ex_compile_st.py  torchair_npugraph_ex_st.py  torchair_ops_st.py  torchair_print_detail_st.py  torchair_print_st.py  torchair_public_bindings_st.py  torchair_scope_st.py  torchair_st.py  torchair_st_stub_aclgraph_utils.py  torchair_st_utils.py
tests/st/torch_npu_registration/: npu_setup.py  open_registration_extension.cpp
tests/ut/: CMakeLists.txt  converter_unittest.py
tests/ut/testcases/: example.cpp
tests/utils_tools/: CMakeLists.txt  opapi_fake.cpp  opapi_fake.h
torchair/: CMakeLists.txt
torchair/abi_compat_ge_apis/: CMakeLists.txt  compat_apis.cpp
torchair/cann_ir_ability/: cann_ir_ability.cpp
torchair/concrete_graph/: concrete_graph.cpp  executor.cpp  export.cpp  hdc_channel.cpp  logger.cpp  npu_aoe.cpp  session.cpp  tng_status.cpp  utils.cpp
torchair/core/: npu_wrapper.cpp  torchair.cpp  torchair.h
torchair/include/: cann_ir_ability.h  checker.h  compat_apis.h  concrete_graph.h  executor.h  export.h  ge_ir.pb.h  graph_data.h  hdc_channel.h  logger.h  npu_aoe.h  session.h  tng_status.h  utils.h  utils_tools.h
torchair/llm_datadist/: llm_datadist.cpp  llm_datadist.h
torchair/npu_graph_executor/: AllocatorManager.cpp  AllocatorManager.h  CMakeLists.txt  dynamic_npu_graph_executor.cpp  dynamic_npu_graph_executor.h  muti_gear_npu_graph_executor.cpp  muti_gear_npu_graph_executor.h  npu_executor.cpp  npu_graph_executor.cpp  npu_graph_executor.h  npu_utils.cpp  npu_utils.h  static_npu_graph_executor.cpp  static_npu_graph_executor.h  wrapper.cpp
torchair/npu_graph_executor/memory/: Allocator.cpp  Allocator.h
torchair/npu_utils/: CMakeLists.txt  npu_format_cast_via_cpu.cpp  npu_format_cast_via_cpu.h  npu_format_cast_via_cpu_wrapper.cpp
torchair/utils_tools/: utils_tools.cpp
(+2732 files in other folders)
